# qt5-starter-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_android  build_linux64  build_mingw32  run-in-qt-build-environment.sh  version.h.in
.github/workflows/: build_artifacts.yml  remove_old_artifacts.yml
android/: AndroidManifest.xml
cmake/: GetVersionFromGitTag.cmake
docker/: Dockerfile.android  Dockerfile.linux64  Dockerfile.mingw32  build-containers.sh
packaging/: Application.desktop  installer.nsis.in
qml/: main.qml
src/: application.rc.in  main.cpp
src/qml/: qtquickcontrols2.conf
translations/: translation_de_DE.ts
